adding user story

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#PC">PC</a>
           </li>
           <li>
-            <a href="#cyfblocks">CYF Blocks</a>
+            <a href="https://blocks.codeyourfuture.io/share.html?v=('j!('blocks!('languageVersion!0~blocks!%5B('type!'on_start'~id!'b'%3AoC%7DjntBE-G%2FM%25'%3AYmAs'~x!112~y!14%7FTEXT1!'at%20the%20start%20%7Bwhen%20run%20is%20clicked%7D')%C2%82HANDLER%C2%88%7DZx*%5BL6cWApMRyeCHR-X%C2%95%C2%8A)%C2%82%C2%8CBP1Sf-0%7DwqVn3.cWL%23(r'%C2%8E))))~next%C2%88oOfxv%3D11%3Ah%2B%2Fm%23%2Fv%60%3BU1%C2%95%C2%86)%C2%82%C2%8Ck*.6LK%23TIm%24.5%2F70l0%7B~%C2%8E))))~next%C2%88qO)%3BO%60%24HWT%5DF5g'%3A9%2F.c0%C2%95%C2%81)%C2%82%C2%8C%5E90I%5BL%5D%5B%2Fjw%3ANb9EBuQz'%C2%8E%C2%85l(%3FVdH%5EUVyfnn%5Bs%40i-%5EN'~x!118~y!145%C2%84utton%C2%89%C2%88AQIs1zN%7Da1r8_%5EI%60L%24iO%26%C2%82%C2%83!'HFay%2C'ggrKq%23)l)l%7C((%3DR%C2%90%C2%9B%7D%60wQ%23E88-9a)*LD.bB%7D%2F%C2%96'2Z7u5d%5Ek_%60%5EJ%248pr4%2B*%3A'%7FOP!'GT')%C2%82A%C2%9CF1Y)K-U%7D%3FwD%2BR%2CMT(C%24S%26%C2%9DcI'%3AgsLlb%2C'u%3FsvSZa'%3A%5DB%23'%7F%C2%94d'~id!'lUUIv%5Ejl%2BAfDURiCEWYy'%7FID!'earning%C2%9E!'%5E%3F%60Z3Zgvv%2C'%5D_t%2C%3A%2BQ2J7'%7FELEMENT!'li%C2%93%C2%98%3FT%3F%24f6%2C'c_%3BuHyP0%60Ho%2C'b%C2%87%C2%9A%C2%8D%C2%80DenOkukrzH%7B%5BwdGz7M(x%26%C2%8B-kwx%3BXc)%24Xu%3BAxnir%3Fu9%C2%91%C2%83!'oW'%3A1Xi(kI6%40v%248-mXzlU%C2%90~LIST%C2%9Ced9t6wVI%7B)tZ%2C'%2B%2BrhcxA%C2%95%C2%8A)))%C2%85%2FWRf%7ClwK'%3A%7Bty_j%7DJ%2F*d5'~x!124~y!467%C2%84utton%C2%89%C2%88l%2C'(t*%5Da%7Cxh_wSj%23)Dx0T%26%C2%82%C2%83!'l5%7DSt6zNmrqea%2C'E%7DRc%7B6%C2%90%C2%9BA9RT%2C'PGodn%2B%7D8%2C(%7CCdqj%C2%96'uRaA1sifSedLAzO%5Dw%7BaC'%7FOP!'LT')%C2%82A%C2%9CYiWds%7Baq*R%5E)f%2C'D%5B%3BeW'%3A%26%C2%9DM%7C.SEY(Gy0OR%607pr-l%5Bq'%7F%C2%94d'~id!'7%2B9ZV*H0%25BP%5B2SASYt45'%7FID!'expenses%C2%9E!'Y*g3Or%60x%7CtoD%24T%5EBKogp'%7FELEMENT!'li%C2%93%C2%98_BJHN23k%7D1N6'%3A2%5D%2FD%3Byj%C2%87%C2%9A%C2%8D%C2%80%7BX%40*xlKWP%2F2P%2C--%3B%2Fqet%26%C2%8BV%5EpF*'%3Abz*J'%3Asl%240kTS_Z%C2%91%C2%83!''%3AJG8EzIDT%3DsacIS*%3DiHP%C2%90~LIST%C2%9C%23quId%3BS%3B%2B%241AZ(Bvlw%2BF%C2%95%C2%86%C2%8Bhc%7C%5D53rO%7B%2Fn%3BvId4uD0V%C2%91VALUE%C2%9Crqbr%2C'2%5B17%7BT%40vu%40g%603Gq%26))~LIST%C2%9C'%3ApeTs)%3BUbV4x%5D%3F%3Fa%2BG8_%C2%95%C2%81%C2%85%25S6k'%3AzO%7DEmYw%7B%2FN*%25cIV'~x!131~y!847%C2%84alance%C2%89%22%C2%984(80Ue.%7Ci%2BDaf5qpjmx2%C2%87Hf8%3FB-jxg_EX%5DozSDI*%2C'%C2%8Dget_sum'~id!'%24%25%5B%2C'%25fk*sqxA2'%3AN05CuX'%C2%82ARRAY%C2%9C%2BCbTB%5E%60sBCJ.BcB6yq%40U%C2%95%C2%81)))))))))))%5D)~variables!%5B('name!'item'~id!'Nj%2C'%7CvzP5WWpK88n'%3AHy%7CP')%C2%99earnings'~%C2%8A%C2%99expenses'~%C2%86%C2%99balance'~%C2%81%C2%99number'~%C2%92%C2%99array'~id!'TdlX%23Ae_*hfUu8r%3FAyCJ')%5D)~h!'%3Cp%3EShow%20earnings%3A%3C%2Fp%C2%8Flist%5C'%3E%3C%2Ful%3E%5Cn%3Cinput%20id%3D%5C'number%5C'%20%2F%C2%97utton%5C'%3Eadd%20earning%3C%2Fbutton%C2%8Fearning%5C'%3EEarnings%3A%3C%2Ful%C2%8Fexpenses%5C'%3EExpenses%3A%3C%2Ful%3E%5Cn%3Cbr%C2%97alance%5C'%3Ebalance%3C%2Fbutton%3E')%22!('block!('type!'%26%C2%95%C2%92)%7F~fields!('%C2%80variables_get'~id!'%C2%81id!'%2Fm9EGb%7C%5DWePV%3Dw%7DpBiz%60')%C2%82~inputs!('%C2%83VALUE%22get_input_value_with_id'~id%C2%84%7FTEXT1!'when%20the%20element%20with%20id'~ID!'b%C2%85))))))))))))%2C('type!'element_clicked'~id!'%C2%86id!'%3D%5EOpc4%5E%3A6-%2C6YSh%2C'%23%5Dqs')%C2%87'%C2%82VALUE!('shadow!('type!'text'~id!'%C2%88%22variables_set'~id!'%C2%89'~TEXT2!'is%20clicked')%C2%82HANDLER%C2%8Aid!'-8%2BgrB2-rATt'%3A%5B%60PV_61')%C2%8B)))))))))~next%22arrays_push'~id!'%C2%8CVALUE%22lists_create_with'~id!'%C2%8D'%7FTEXT!''))~block!('type!'%C2%8E~extraState!('itemCount!0%C2%8F%3E%5Cn%3Cul%20id%3D%5C'%C2%90'%7FID!'number')))%C2%91'%7FWHERE!'END')%C2%82%C2%92id!'FZ%3DL*H%40f(ZJTX(%3Ds%24S%3DM')%C2%93')%C2%82STACK%22%C2%94NUM!0))))))~DO0%22with_element_by_i%C2%95'%7FVAR!('%C2%96'%C2%82IF0%22logic_compare'~id!%C2%97%3E%5Cn%3Cbutton%20id%3D%5C'b%C2%98set_content'~id!'%C2%99%2C('name!'%C2%9AJTuLoHCx%3Dcx1zu%24Vh%7BLl%C2%9B)~next%22controls_if'~id!'%C2%9C%22%C2%80%C2%9D))~B%22math_number'~id!'%C2%9E%C2%93add_element'~id%01%C2%9E%C2%9D%C2%9C%C2%9B%C2%9A%C2%99%C2%98%C2%97%C2%96%C2%95%C2%94%C2%93%C2%92%C2%91%C2%90%C2%8F%C2%8E%C2%8D%C2%8C%C2%8B%C2%8A%C2%89%C2%88%C2%87%C2%86%C2%85%C2%84%C2%83%C2%82%C2%81%C2%80%7F%26%22_">CYF Blocks</a>
           </li>
           <li>
             <a href="userstory">User Story</a>
@@ -82,6 +82,50 @@
     <h2>Basket:</h2>
     <ul id="basket-list"></ul>
     <br />
+    <h2> User Story </h2>
+
+        <p>The user stories you create will differ based on where the customer is during the product experience. Here are examples of what these stories could look like during various stages.</p>
+        <h3>Step 1: Searching for Solutions</h3>
+        <p>During the discovery phase, users are searching online for a potential solution to the issues and challenges they’re frequently experiencing. They’re also comparing your product to different platforms to see which is the best fit for their needs. Writing user stories at this stage helps you identify which features you should build within your product and how to showcase them on your website.</p>
+        <h3>User Stories:</h3>
+        <ul>
+        <li>“As an eCommerce business owner, I need a solution that automates all the repetitive tasks that come with inventory management, so I can free up my schedule and focus on more important tasks.”</li>
+        <li>“As a project manager at a large company, I want a platform that comes with task delegation functionality and a reporting feature, so I can track my remote team’s progress more efficiently.”</li>
+        <li>“As a freelancer who works with clients outside my country, I need a payment solution with low transaction fees that allows me to invoice companies, so I can stop losing money on each project I complete.”</li>
+        </ul>
+        <h3>Step 2: Registering &amp; Creating an Account</h3>
+        <p>As the user is about to register and start using your product for the first time, they have a couple of expectations and objectives in mind that you must address in advance. These are often related to security, integrations, and inviting others to the platform.</p>
+        <h3>User Stories:</h3>
+        <ul>
+        <li>“As an eCommerce business owner, I want to easily synchronize my store with the inventory management platform during registration, so I don’t have to add all of my products manually later.”</li>
+        <li>“As a project manager, I want to invite other team members to this project management platform, so they can help me review it and determine if it helps them be more productive.”</li>
+        <li>“As a freelancer, I want to be able to add two-step verification to the registration process to add an extra layer of security to my login and make sure no one else besides me has access to my payments/invoices.”</li>
+        </ul>
+        <h3>Step 3: Purchasing Your Product</h3>
+        <p>In order to get users to convert into paying customers, there can’t be any friction during the purchasing process. Otherwise, you’ll be left with abandoned carts and missed opportunities. User stories identify these issues in advance to find solutions in the product experience to solve them. </p>
+        <h3>User Stories:</h3>
+        <ul>
+        <li>“As an eCommerce business owner, I want to be reminded how many days are left in my free trial of the inventory management tool so that I know when I need to make my final decision.”</li>
+        <li>“As a project manager, I need a custom pricing plan since I manage many people in different departments at the same time and have complex needs.”</li>
+        <li>“As a freelancer, I want to be able to make my purchase via different methods (PayPal, credit card, bank transfer, etc.), so I can choose which one fits me the best.”</li>
+        </ul>
+        <h3>Step 4: Onboarding</h3>
+        <p>The <a href="https://getstream.io/blog/how-we-onboard-users-at-stream/">onboarding process</a> could make or break your user retention. The goal at this stage is to get users started as quickly as possible and to direct them to the features that are most important to them.</p>
+        <h3>User Stories:</h3>
+        <ul>
+        <li>“As an eCommerce business owner, I want to be able to go through a product tour of the inventory management tool so that I can get a clear understanding of its key benefits.”</li>
+        <li>“As a project manager, I want to create and delegate my first task as soon as possible (within the first 10 minutes), so I can instantly see the value that the product has to offer.”</li>
+        <li>“As a freelancer, I want to create a sample invoice first to get an idea of what the process would be like when invoicing clients and receiving payments.”</li>
+        </ul>
+        <h3>Step 5: Retaining Users</h3>
+        <p>Your product success depends on retaining customers long-term. Not only does it bring more revenue, but a high retention rate is proof that your product is meeting the needs of your target audience.</p>
+        <h3>User Stories:</h3>
+        <ul>
+        <li>“As an eCommerce business owner, I need an inventory management solution that’s going to help me scale, so I can set up my store for long-term growth.”</li>
+        <li>“As a project manager, I want access to a knowledge base with resources such as webinars to better understand how my team can get the most out of the project management tool.”</li>
+        <li>“As a freelancer, I want my invoice/payment platform to provide me with weekly content on complex accounting processes (such as budgeting, cash flow, payment safety, and more), so I can learn to better manage my billing over time.”</li>
+        </ul>   
+
     <script type="text/javascript" src="myscript.js"></script>
   </body>
 </html>
